--- a/hw/resume_css/styles.css
+++ b/hw/resume_css/styles.css
@@ -1,18 +1,64 @@
-body {
-  background: #FFE7A9;
-}
-h1{
-  border: 1px dashed white;
+.title{
+  font-family:"Dancing Script", serif;
+  color:Pink;
   text-align: center;
 }
-h2{
+.left{
+  float:left;
+  width:50%
+}
+.right{
+  float:right;
+  width:50%
+}
+#colorbar{
+  background-color: pink;
+  width:100%;
+  height:1px;
+
+}
+.footer {
+  list-style-type: none;
   text-align: center;
+  padding: 50px;
+  border: 10px solid grey;
+  color: pink;
+
+#Contact{
+  list-style-type: none;
 }
-.yaniza{
-  color: red;
+
+
+
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
-#workexperience { text-decoration:
-line-through;}
-.linecolor{
-  color: #FFFF
+
+#skills{
+  list-style-type: circle;
+}
+
+#divider{
+  background-color: Pink;
+  width: 100%;
+  height: 10px;
+}
+
+body{
+font-family: "Play fair", serif;
+font-size: 20px;
+
+}
+
+h3 {
+  text-decoration: underline;
+  color: grey;
+}
+
+a:link
+{
+color:grey;
 }
